syntax = "proto3";

package worker.v1;

import "buf/validate/validate.proto";
import "worker/v1/agent.proto";

option go_package = "github.com/sebastianm/flowgentic/internal/proto/gen/worker/v1;workerv1";

// AgentCtlService receives status reports and plan submissions from agent processes via the agentctl binary.
service AgentCtlService {
  // ReportStatus receives a status update from an agent process.
  rpc ReportStatus(ReportStatusRequest) returns (ReportStatusResponse) {}
  // SubmitPlan receives a plan submission from an agent process for human review.
  rpc SubmitPlan(SubmitPlanRequest) returns (SubmitPlanResponse) {}
}

message ReportStatusRequest {
  string session_id = 1 [(buf.validate.field).string.min_len = 1];
  Agent agent = 2;
  string status = 3;
}

message ReportStatusResponse {}

message SubmitPlanRequest {
  string session_id = 1 [(buf.validate.field).string.min_len = 1];
  Agent agent = 2;
  bytes plan = 3;
}

message SubmitPlanResponse {}
